[gd_scene load_steps=17 format=3 uid="uid://dqd37bmtn1ha"]

[ext_resource type="Script" path="res://Code/Door.gd" id="1_ilyve"]
[ext_resource type="Texture2D" uid="uid://b21ln67a3r4s8" path="res://2D/Sprout Lands - Sprites - Basic pack/Tilesets/Wooden House.png" id="2_uye7c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0aj6f"]
atlas = ExtResource("2_uye7c")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycb78"]
atlas = ExtResource("2_uye7c")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_unqi0"]
atlas = ExtResource("2_uye7c")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtkcg"]
atlas = ExtResource("2_uye7c")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7e5i3"]
atlas = ExtResource("2_uye7c")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_exwu8"]
atlas = ExtResource("2_uye7c")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkwcv"]
atlas = ExtResource("2_uye7c")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8qvj"]
atlas = ExtResource("2_uye7c")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrrvu"]
atlas = ExtResource("2_uye7c")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ofyd"]
atlas = ExtResource("2_uye7c")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1k0qc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0aj6f")
}],
"loop": true,
"name": &"close",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycb78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unqi0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtkcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7e5i3")
}],
"loop": false,
"name": &"closing",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exwu8")
}],
"loop": true,
"name": &"open",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkwcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8qvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrrvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ofyd")
}],
"loop": false,
"name": &"opening",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aibhy"]
size = Vector2(10, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_835di"]
size = Vector2(4, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7thfh"]
size = Vector2(16, 4)

[node name="Door (Outside)" type="Node2D" node_paths=PackedStringArray("animated_sprite", "interaction_area", "static_body")]
y_sort_enabled = true
script = ExtResource("1_ilyve")
animated_sprite = NodePath("AnimatedSprite2D")
interaction_area = NodePath("InteractionArea2D")
static_body = NodePath("StaticBody2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1k0qc")
animation = &"close"

[node name="InteractionArea2D" type="Area2D" parent="."]
position = Vector2(-8, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea2D"]
position = Vector2(8, 7.5)
shape = SubResource("RectangleShape2D_aibhy")

[node name="TransitionArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransitionArea2D"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_835di")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-8, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(8, 2)
shape = SubResource("RectangleShape2D_7thfh")

[connection signal="body_entered" from="InteractionArea2D" to="." method="_on_interaction_area_2d_body_entered"]
[connection signal="body_exited" from="InteractionArea2D" to="." method="_on_interaction_area_2d_body_exited"]
[connection signal="body_entered" from="TransitionArea2D" to="." method="_on_transition_area_2d_body_entered"]
